feat: download mods from internet

--- a/CarbonLauncher/CarbonLauncher.vcxproj
+++ b/CarbonLauncher/CarbonLauncher.vcxproj
@@ -147,6 +147,7 @@
     <ClCompile Include="src\gamemanager.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\pipemanager.cpp" />
+    <ClCompile Include="src\repomanager.cpp" />
     <ClCompile Include="src\state.cpp" />
     <ClCompile Include="src\utils.cpp" />
   </ItemGroup>
@@ -155,6 +156,7 @@
     <ClInclude Include="include\discordmanager.h" />
     <ClInclude Include="include\gamemanager.h" />
     <ClInclude Include="include\pipemanager.h" />
+    <ClInclude Include="include\repomanager.h" />
     <ClInclude Include="include\state.h" />
     <ClInclude Include="include\utils.h" />
   </ItemGroup>
