ci: release workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ env:
   BUILD_CONFIGURATION: Release
 
 permissions:
-  contents: read
+  contents: write
 
 jobs:
   build:
@@ -42,3 +42,13 @@ jobs:
         name: CarbonLauncher_${{env.BUILD_CONFIGURATION}}
         path: |
           x64\${{env.BUILD_CONFIGURATION}}\
+
+    - name: Create Release
+      uses: ncipollo/release-action@v1.14.0
+      with:
+        artifacts: |
+          x64/${{env.BUILD_CONFIGURATION}}/CarbonLauncher.exe
+          x64/${{env.BUILD_CONFIGURATION}}/*.dll
+        draft: true
+        makeLatest: true
+        tag: dev
